{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 278,
  "lineage": "a1996b00-8af9-cea1-ccc9-aa307eab2e68",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ws_vpc_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-03aa8dd090afaf1cb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:subnet/subnet-03aa8dd090afaf1cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "available_ip_address_count": 1019,
            "cidr_block": "10.0.144.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aa8dd090afaf1cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674867276416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "project-subnet-private2-eu-central-1b"
            },
            "vpc_id": "vpc-02968c7d84070f1c3"
          }
        },
        {
          "index_key": "subnet-0d9a110072bbf0282",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:subnet/subnet-0d9a110072bbf0282",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 1019,
            "cidr_block": "10.0.128.0/22",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9a110072bbf0282",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674867276416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "project-subnet-private1-eu-central-1a"
            },
            "vpc_id": "vpc-02968c7d84070f1c3"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:vpc/vpc-02968c7d84070f1c3",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d8c3d3e8ef3a2d10",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a5916a0c0ec56dc6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02968c7d84070f1c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00ecb51f9b51be145",
            "owner_id": "674867276416",
            "tags": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:route-table/rtb-0476bcabe7a3c59fe",
            "id": "rtb-0476bcabe7a3c59fe",
            "owner_id": "674867276416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-link-ws-vpc-02968c7d84070f1c3-pl-local-route-tbl"
            },
            "tags_all": {
              "Name": "private-link-ws-vpc-02968c7d84070f1c3-pl-local-route-tbl"
            },
            "timeouts": null,
            "vpc_id": "vpc-02968c7d84070f1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dataplane_vpce_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c798552f425b5d88",
            "route_table_id": "rtb-0476bcabe7a3c59fe",
            "subnet_id": "subnet-005e2ccfd7666a83c"
          },
          "dependencies": [
            "aws_route_table.this",
            "aws_subnet.dataplane_vpce",
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dataplane_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:security-group/sg-02d44fbfa07966579",
            "description": "Security group shared with relay and workspace endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.176.0/24",
                  "10.0.144.0/22",
                  "10.0.128.0/22"
                ],
                "description": "Outbound rules",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.176.0/24",
                  "10.0.144.0/22",
                  "10.0.128.0/22"
                ],
                "description": "Outbound rules",
                "from_port": 6666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6666
              }
            ],
            "id": "sg-02d44fbfa07966579",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.176.0/24",
                  "10.0.144.0/22",
                  "10.0.128.0/22"
                ],
                "description": "Inbound rules",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.176.0/24",
                  "10.0.144.0/22",
                  "10.0.128.0/22"
                ],
                "description": "Inbound rules",
                "from_port": 6666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6666
              }
            ],
            "name": "Data Plane VPC endpoint security group",
            "name_prefix": "",
            "owner_id": "674867276416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-link-ws-vpc-02968c7d84070f1c3-pl-vpce-sg-rules"
            },
            "tags_all": {
              "Name": "private-link-ws-vpc-02968c7d84070f1c3-pl-vpce-sg-rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-02968c7d84070f1c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.ws_vpc_subnets",
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dataplane_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:subnet/subnet-005e2ccfd7666a83c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.176.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005e2ccfd7666a83c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "674867276416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-link-ws-vpc-02968c7d84070f1c3-pl-vpce"
            },
            "tags_all": {
              "Name": "private-link-ws-vpc-02968c7d84070f1c3-pl-vpce"
            },
            "vpc_id": "vpc-02968c7d84070f1c3"
          },
          "dependencies": [
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "backend_rest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:vpc-endpoint/vpce-050fe80cac67be87d",
            "dns_entry": [
              {
                "dns_name": "vpce-050fe80cac67be87d-fnogusm7.vpce-svc-081f78503812597f7.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-050fe80cac67be87d-fnogusm7-eu-central-1b.vpce-svc-081f78503812597f7.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              }
            ],
            "id": "vpce-050fe80cac67be87d",
            "network_interface_ids": [
              "eni-0a3ea98d8bc239311"
            ],
            "owner_id": "674867276416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d44fbfa07966579"
            ],
            "service_name": "com.amazonaws.vpce.eu-central-1.vpce-svc-081f78503812597f7",
            "state": "available",
            "subnet_ids": [
              "subnet-005e2ccfd7666a83c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02968c7d84070f1c3"
          },
          "dependencies": [
            "aws_security_group.dataplane_vpce",
            "aws_subnet.dataplane_vpce",
            "data.aws_subnet.ws_vpc_subnets",
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "relay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:674867276416:vpc-endpoint/vpce-06857eec5cfaba2e5",
            "dns_entry": [
              {
                "dns_name": "vpce-06857eec5cfaba2e5-7r78ze3s.vpce-svc-08e5dfca9572c85c4.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-06857eec5cfaba2e5-7r78ze3s-eu-central-1b.vpce-svc-08e5dfca9572c85c4.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              }
            ],
            "id": "vpce-06857eec5cfaba2e5",
            "network_interface_ids": [
              "eni-0622939a516eb6bc4"
            ],
            "owner_id": "674867276416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02d44fbfa07966579"
            ],
            "service_name": "com.amazonaws.vpce.eu-central-1.vpce-svc-08e5dfca9572c85c4",
            "state": "available",
            "subnet_ids": [
              "subnet-005e2ccfd7666a83c"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02968c7d84070f1c3"
          },
          "dependencies": [
            "aws_security_group.dataplane_vpce",
            "aws_subnet.dataplane_vpce",
            "data.aws_subnet.ws_vpc_subnets",
            "data.aws_vpc.prod"
          ]
        }
      ]
    }
  ]
}